plugins {
    id 'java'
    id 'war'
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '1.9.10'
}

mainClassName = 'io.xeros.Server'

applicationDefaultJvmArgs = [
    '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
    '--add-opens=java.base/java.nio=ALL-UNNAMED',
    '-Dio.netty.tryReflectionSetAccessible=true'
]

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

tasks.withType(Copy) { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }

sourceSets {
    main {
        java { srcDir 'src/main/java' }
        kotlin { srcDir 'src/main/java'; exclude 'com/varlamore/**' }
        resources { srcDir 'resources' }
    }
    test {
        java { srcDir 'test' }
    }
}

repositories {
    mavenCentral()
    maven { url 'https://m2.dv8tion.net/releases' }
    maven { url 'https://raw.githubusercontent.com/OpenRune/hosting/master' }
}

test { useJUnitPlatform() }

configurations.all { exclude group: 'org.slf4j', module: 'slf4j-simple' }

dependencies {
    implementation fileTree(dir: 'deps', include: ['*.jar'])
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
    implementation 'dev.openrune:filestore:1.2.3'
    implementation 'org.reflections:reflections:0.9.12'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.8.6'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.6'
    implementation 'de.svenkubiak:jBCrypt:0.4.1'
    implementation 'com.github.cage:cage:1.0'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.11'
    implementation 'mysql:mysql-connector-java:8.0.25'
    implementation 'net.dv8tion:JDA:4.2.1_253'
    implementation 'org.flywaydb:flyway-core:7.11.0'
    implementation 'commons-net:commons-net:3.8.0'
    implementation 'com.zaxxer:HikariCP:3.4.5'
    implementation 'org.jsoup:jsoup:1.14.2'
    implementation 'io.netty:netty-all:4.1.68.Final'
    implementation 'org.joda:joda-money:1.0.1'
    implementation 'joda-time:joda-time:2.12.5'
    implementation 'com.beust:klaxon:5.6'
    implementation 'io.github.classgraph:classgraph:4.8.165'
    implementation 'me.tongfei:progressbar:0.10.0'
    implementation 'io.github.microutils:kotlin-logging:3.0.5'
}

distZip {
    into(project.name) {
        from '.'
        into project.name + '/bin/'
        include 'etc/'
    }
}